# rag_evals_guardrails

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: deps.py  errors.py  main.py  openapi_config.py
core/: __init__.py  cache.py  config.py  interfaces.py  logging_config.py  models.py  redis_client.py  tokens.py  tracing.py
data/: eval_set.json  example_query_outputs.json  sample_documents.json
evaluation/: __init__.py  embedding_metrics.py  judge.py  pipeline.py  runner.py  schemas.py
guardrails/: __init__.py  confidence.py  detector.py  fallback.py  pipeline.py  self_check.py
ingestion/: __init__.py  pipeline.py
ingestion/chunkers/: __init__.py  recursive.py  semantic.py
ingestion/embedders/: __init__.py  local_embedder.py  openai_embedder.py
ingestion/stores/: __init__.py  bm25_index.py  faiss_store.py
llm/: __init__.py  factory.py
llm/providers/: __init__.py  anthropic_provider.py  ollama_provider.py  openai_provider.py
retrieval/: __init__.py  hybrid.py  query_rewrite.py  query_service.py  reranker.py
tests/: conftest.py  test_api_integration.py  test_chunker.py  test_guardrails.py  test_hybrid.py  test_openapi.py
