[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-evals-guardrails"
version = "0.1.0"
description = "Production RAG with evaluation, guardrails, hybrid retrieval"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "openai>=1.55.0",
    "anthropic>=0.40.0",
    "numpy>=1.26.0",
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.2",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "tiktoken>=0.8.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
